# Aida64-Keys

./: Cargo.toml  README.md
.github/workflows/: rust.yml
aida64-keys-cli/: Cargo.toml  README.md
aida64-keys-cli/src/: main.rs
aida64-keys-gui/: Cargo.toml  README.md
aida64-keys-gui/src/: main.rs
aida64-keys-lib/: Cargo.toml  README.md
aida64-keys-lib/src/: lib.rs
